--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,10 @@
 
   <licenses>
     <license>
-      <name>GNU General Public License v3.0</name>
-      <url>http://www.gnu.org/licenses/agpl-3.0.html</url>
+      <name>Apache License 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
       <distribution>repo</distribution>
-      <comments>A socket manager</comments>
+      <comments>socket patterns</comments>
     </license>
   </licenses>
 
@@ -107,10 +107,10 @@
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/liumapp/DNSQueen.git</connection>
-    <developerConnection>scm:git:https://github.com/liumapp/DNSQueen.git</developerConnection>
-    <url>https://github.com/liumapp/DNSQueen</url>
-    <tag>v${project.version}</tag>
+    <connection>scm:git:https://github.com/liumapp/socket-pattern.git</connection>
+    <developerConnection>scm:git:https://github.com/liumapp/socket-pattern.git</developerConnection>
+    <url>https://github.com/liumapp/socket-pattern</url>
+    <tag>${project.version}</tag>
   </scm>
 
   <distributionManagement>
