--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.liumapp.pattern</groupId>
   <artifactId>socket-pattern</artifactId>
-  <version>v1.2.0</version>
+  <version>v1.2.2</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -105,6 +105,11 @@
       <name>liumapp</name>
       <url>http://www.liumapp.com</url>
       <email>liumapp.com@gmail.com</email>
+    </developer>
+    <developer>
+      <name>hxy</name>
+      <url>https://github.com/haoxiaoyong1014</url>
+      <email>hxyHelloWorld@163.com</email>
     </developer>
   </developers>
 
